Sun Aug  7 07:14:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (HAVE_GETCONTEXT): see getcontext(3) because DragonFly BSD
	  x64 port doesn't have it.

Sun Aug  7 00:42:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/tk/lib/tk/wm.rb (Tk::Wm.command): Add the missing receiver
	  before calling epath. patched by flori
	  https://github.com/flori/ruby/commit/aa9474d32e5f2c57f8b0e2e0c528a03f06a4d433

Sat Aug  6 07:06:34 2011  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (w_object):  Fix exception message when _dump_data is not
	  defined on a T_DATA object.

Fri Aug  5 22:16:20 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* numeric.c (rb_infinity, rb_nan): use WORDS_BIGENDIAN to get endian.
	  fix [Bug #5160] [ruby-dev:44356]

Fri Aug  5 17:14:11 2011  Akinori MUSHA  <knu@iDaemons.org>

	* test/test_syslog.rb (TestSyslog#test_log): Do not be too
	  specific about the log line format.  Fixes #5081.

Fri Aug  5 15:57:10 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* complex.c (f_signbit): fix compile error in gcc4 on Solaris with
	  CFLAGS="-std=gnu99".  [ruby-dev:44355] fix [Bug #5159]

	* math.c: ditto.

Fri Aug  5 15:55:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_object.rb: tests that respond_to? returns false.

Fri Aug  5 13:32:43 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/xmlrpc/client.rb, lib/xmlrpc/server.rb: should use
	  String#bytesize instead of String#size.

Fri Aug  5 12:18:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (check_funcall): try respond_to? first if redefined.
	  [Bug #5158]

Fri Aug 05 09:48:22 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 1.8.7:
	  Added missing require for `gem uninstall --format-executable`.

	  The correct name of the executable being uninstalled is now displayed
	  with --format-executable.

	  Fixed `gem unpack uninstalled_gem` default version picker.

	  RubyGems no longer claims a nonexistent gem can be uninstalled.
