@@ -1,3 +1,7 @@
+Sun Aug  7 14:08:16 2011  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* ext/objspace/objspace.c: fix typos in a document.
+
 Sun Aug  7 07:14:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* cont.c (HAVE_GETCONTEXT): see getcontext(3) because DragonFly BSD
